tried to fix alignment of 5-day block, not very successful. JS code updated to get it to save to local storage - error on line 62 in JS regarding promise.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,17 +90,17 @@ main {
 
 #fiveW {
     background-color: rgb(54, 54, 153) ;
-    font-size: 16px;
+    font-size: 12px;
     padding-left: 15px;
     padding-right: 10px;
     padding-top: 20px;
-    padding-bottom: 20px;
+    padding-bottom: 10px;
     justify-content: space-between;
     position: end;
 }
 
 .row {
-    display: flex;
+    display: flex-end;
     flex-direction: row;
     flex-wrap: wrap;
 }
